// 声明 proto 语法版本，固定值
syntax = "proto3";

// proto 包名
package websiterpc;

// 生成 golang 代码后的包名
option go_package = "./websiterpc";

message EmptyReq {
}

message EmptyResp {
}

message IdReq {
  int64 id = 1;
}
message IdsReq {
  repeated int64 ids = 1;
}

/************** blog 网站管理 **************/

message UserVisit {
  string date = 1;
  int64 view_count = 2;
}

message UserDailyVisitRsp{
  repeated UserVisit list = 1;
}

service WebsiteRpc {
  // 用户日浏览量
  rpc GetUserDailyVisit(EmptyReq) returns(UserDailyVisitRsp);
}


//message ChatRecord {
//  int64 id = 1;// 主键
//  int64 user_id = 2;// 用户id
//  string nickname = 3;// 昵称
//  string avatar = 4;// 头像
//  string content = 5;// 聊天内容
//  string ip_address = 6;// ip地址
//  string ip_source = 7;// ip来源
//  int64 type = 8;// 类型
//  int64 created_at = 9;// 创建时间
//  int64 updated_at = 10;// 更新时间
//}
//
//message FindChatRecordListReq {
//  int64 page = 1;
//  int64 page_size = 2;
//  string sorts = 3; // 排序
//}
//
//message FindChatRecordListResp {
//  repeated ChatRecord list = 1;
//}
//
//service ChatRpc {
//  // 创建聊天记录
//  rpc AddChatRecord(ChatRecord) returns(ChatRecord);
//  // 更新聊天记录
//  rpc UpdateChatRecord(ChatRecord) returns(ChatRecord);
//  // 删除聊天记录
//  rpc DeleteChatRecord(IdReq) returns(BatchResp);
//  // 批量删除聊天记录
//  rpc DeleteChatRecordList(IdsReq) returns(BatchResp);
//  // 查询聊天记录
//  rpc FindChatRecord(IdReq) returns(ChatRecord);
//  // 查询聊天记录列表
//  rpc FindChatRecordList(FindChatRecordListReq) returns(FindChatRecordListResp);
//  // 查询聊天记录数量
//  rpc FindChatRecordCount(FindChatRecordListReq) returns(CountResp);
//}
